--- a/sso-permission-ui/src/test/css/custom.css
+++ b/sso-permission-ui/src/test/css/custom.css
@@ -525,3 +525,17 @@
     line-height: 1;
     vertical-align: bottom
 }
+
+
+
+.x_title_left{
+    margin: 5px 0 6px;
+    float: left;
+    display: block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.fixed_height_360 {height: 360px}
+.fixed_height_560 {height: 560px}
